--- a/src/style.css
+++ b/src/style.css
@@ -11,10 +11,15 @@ h3{
    
 }
 .button{
+    size:15px;
     background-color:green;
     color:white;
     padding:13px;
     text-align:center;
+    border:none;
+    margin:2px;
+    border-radius:5px;
+
 }
 div{
     text-align: center;
