--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
     background-color: green;
     padding:2px;
     color:white;
@@ -21,6 +21,23 @@ h3{
     border-radius:5px;
 
 }
+div{
+    text-align: center;
+} */
+
+
+.button{
+    size:15px;
+    background-color:blue;
+    color:white;
+    padding:13px;
+    text-align:center;
+    border:none;
+    margin:2px;
+    border-radius:5px;
+
+}
+
 div{
     text-align: center;
 }
